[package]
name = "mirror-query"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirror-error = { git = "https://github.com/lmzuccarelli/rust-mirror-error", branch = "main", version = "0.1.0" }
urlencoding = "2.1.3"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.74"

[dev-dependencies]
serial_test = "2.0.0"
tokio-test = "0.4.3"
mockito = "1.2.0"

[lib]
name = "mirror_query"
path = "src/lib.rs"
